--- a/style.css
+++ b/style.css
@@ -93,3 +93,31 @@
 	font-weight: bold;
 	border-radius: 6px;
 }
+
+.header-info-block {
+	display: flex;
+	justify-content: space-between;
+}
+
+.card-info {
+	min-width: 361px;
+}
+
+.card-info-img {
+	display: flex;
+}
+.info-title {
+	font-size: 20px;
+	font-weight: bold;
+	color: #fff;
+	letter-spacing: 0.5px;
+	margin-top: 15px;
+	margin-bottom: 4px;
+}
+.info-subtitle {
+	font-size: 13px;
+	color: #8c8c8c;
+	font-weight: bold;
+	letter-spacing: 1.5px;
+	display: block;
+}
