--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-* {
-	box-sizing: border-box;
-	margin: 0;
-	font-family: Arial, Helvetica, sans-serif;
-}
+@import url("https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css");
 
 .container {
 	max-width: 1080px;
@@ -185,4 +181,43 @@
 	letter-spacing: 1.5px;
 	text-align: center;
 	display: block;
+}
+
+.audio-holder {
+	width: 540px;
+}
+
+.audio-detail {
+	flex: 1;
+}
+
+.control {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+}
+
+.control i {
+	width: 40px;
+	height: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 1.25rem;
+	background-color: blue;
+	color: white;
+	cursor: pointer;
+}
+
+.audio-author {
+	display: flex;
+	justify-content: center;
+	position: relative;
+}
+
+.time {
+	color: #fff;
+	position: absolute;
+	top: 10px;
+	right: 0;
 }
