--- a/style.css
+++ b/style.css
@@ -447,4 +447,51 @@
 }
 
 @media (max-width: 578px) {
+	.navigation-holder {
+		display: none;
+	}
+
+	.mob-btn {
+		display: inline-block;
+		text-decoration: none;
+		font-size: 60px;
+		color: #fff;
+	}
+
+	.header-title-text {
+		font-size: 60px;
+	}
+
+	.join {
+		display: none;
+	}
+
+	.card-info-img {
+		max-width: 100%;
+	}
+
+	.audio-holder,
+	.card-about {
+		width: 100%;
+	}
+
+	.audio-block img {
+		display: none;
+	}
+
+	.audio-container {
+		padding: 0 42px 0 0;
+	}
+
+	.control i {
+		height: 48px;
+	}
+
+	.course-name {
+		font-size: 24px;
+	}
+}
+
+.mob-btn {
+	display: none;
 }
